remove all json calls

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "dependencies": {
     "@docsearch/css": "^3.5.2",
     "@docsearch/react": "^3.5.2",
-    "@remix-run/express": "2.12.0",
-    "@remix-run/node": "2.12.0",
-    "@remix-run/react": "2.12.0",
+    "@remix-run/express": "0.0.0-nightly-4a957276b-20240918",
+    "@remix-run/node": "0.0.0-nightly-4a957276b-20240918",
+    "@remix-run/react": "0.0.0-nightly-4a957276b-20240918",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
     "compression": "^1.7.4",
@@ -59,7 +59,7 @@
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
-    "remix": "2.12.0",
+    "remix": "0.0.0-nightly-4a957276b-20240918",
     "satori": "^0.10.14",
     "semver": "^7.5.4",
     "shiki": "^0.14.7",
@@ -76,8 +76,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "2.12.0",
-    "@remix-run/eslint-config": "2.12.0",
+    "@remix-run/dev": "0.0.0-nightly-4a957276b-20240918",
+    "@remix-run/eslint-config": "0.0.0-nightly-4a957276b-20240918",
     "@testing-library/jest-dom": "^6.2.0",
     "@types/follow-redirects": "^1.14.4",
     "@types/gunzip-maybe": "^1.4.2",
